Transition manipulation done (almost)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,14 +62,15 @@ add_executable(TuringMachineGUI
   main.cpp
   model/turingmachine.cpp
   model/turingmachine.hpp
-  ui/render.cpp
   ui/render.hpp
+  ui/render.cpp
   ui/manipulators.hpp
   ui/manipulators.cpp
   ui/fa_icons.hpp
   ui/drawobject.hpp
   ui/drawobject.cpp
   app.hpp
+  defs.hpp
 )
 
 # =============================================================================
